Update global font to Lexend across all pages, adjust color scheme for consistency, and refine product titles and descriptions for clarity.

--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
 	<!-- Specific Stylesheet -->
 	<link rel="stylesheet" href="css/colors.php?color=F4D03F" type="text/css" /> <!-- Theme Color -->
 	<link rel="stylesheet" href="css/fonts.css" type="text/css" /> <!-- Theme Font -->
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 	<!-- / -->
 
 	<style>
@@ -523,7 +524,7 @@
 								<h4 class="nott font-weight-semibold mb-3 mt-5" style="color: #7CB342" data-translate="about.pandan.title">Pandan & Coconut</h4>
 								<p class="mb-4" data-translate="about.pandan.description">Pandan & Coconut infuse a natural, sweet aroma, natural green color and so called "Asia vanilla". A cornerstone of Southeast Asian culinary heritage.</p>
 								
-								<h4 class="nott font-weight-semibold mb-3 mt-5" style="color: #F4D03F" data-translate="about.cempedak.title">Cempedak</h4>
+								<h4 class="nott font-weight-semibold mb-3 mt-5" style="color: #E91E63" data-translate="about.cempedak.title">Cempedak</h4>
 								<p class="mb-4" data-translate="about.cempedak.description">Cempedak is a beloved, pungent and intensely sweet, creamy tropical fruits native to Southeast Asia, particularly Malaysia. It was custard-like, orange-yellow flesh is highly sought after for desserts.</p>
 							</div>
 						</div>
