--- a/contact.html
+++ b/contact.html
@@ -33,22 +33,10 @@
 	============================================= -->
 	<title>Contact Us | 3Adurian - Premium Fusion Desserts</title>
 
+	<!-- Global Font: Lexend -->
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 	<style>
-		:root {
-			--font-montserrat: 'Montserrat', sans-serif;
-		}
-		
-		body, html {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
-		
-		h1, h2, h3, h4, h5, h6 {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
-		
-		.menu-link, .button, .btn {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
 		
 		/* Floating Contact Bubbles */
 		.floating-contacts {
@@ -373,7 +361,7 @@
 							<p><strong data-translate="contact.email">Email:</strong> <a href="mailto:3adurian2025@gmail.com" style="color: #F4D03F">3adurian2025@gmail.com</a></p>
 							<p><strong data-translate="contact.phone">Phone:</strong> <a href="tel:+60197344930" style="color: #7CB342">+6019 734 4930</a></p>
 							<p><strong>WhatsApp:</strong> <a href="https://wa.me/60197344930" target="_blank" style="color: #7CB342">+6019 734 4930</a></p>
-							<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: #F4D03F"><i class="fab fa-facebook-f"></i> 3A Durian</a></p>
+							<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: #E91E63"><i class="fab fa-facebook-f"></i> 3A Durian</a></p>
 							<p class="mt-4"><strong data-translate="contact.location">Location:</strong><br>Spx Bercham Hub</p>
 						</div>
 						<div class="col-md-5">
