--- a/index.html
+++ b/index.html
@@ -33,25 +33,10 @@
 	============================================= -->
 	<title>Home | 3Adurian - Premium Fusion Desserts</title>
 
-	<!-- Hero font: soft, tropical style -->
-	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+	<!-- Global Fonts: Lexend (main), Montserrat (hero titles) -->
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
 
 	<style>
-		:root {
-			--font-montserrat: 'Montserrat', sans-serif;
-		}
-		
-		body, html {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
-		
-		h1, h2, h3, h4, h5, h6 {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
-		
-		.menu-link, .button, .btn {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
 		
 		/* Floating Contact Bubbles */
 		.floating-contacts {
@@ -325,13 +310,16 @@
 		}
 		.hero-copy-wrapper {
 			color: #1b5e20;
-			font-family: 'Quicksand', var(--font-montserrat), sans-serif !important;
 		}
-		.hero-copy-wrapper h1,
-		.hero-copy-wrapper h2,
-		.hero-copy-wrapper p {
-			font-family: 'Quicksand', var(--font-montserrat), sans-serif !important;
+
+		/* Hero titles use Montserrat Bold */
+		.hero-line-1,
+		.hero-line-2 {
+			font-family: 'Montserrat', sans-serif !important;
+			font-weight: 800 !important;
 		}
+
+		/* Other hero text uses Lexend via global styles */
 		.hero-copy-wrapper .hero-line {
 			opacity: 0;
 			transform: translateY(20px);
@@ -367,7 +355,7 @@
 			color: #F1C40F; /* warm golden yellow */
 		}
 		.hero-line-5 {
-			color: #5D4037; /* rich cocoa/brown for contrast */
+			color: #E91E63; /* pink */
 		}
 
 		@keyframes heroImageIn {
@@ -601,11 +589,11 @@
 							<div class="col-lg-4 col-md-6 mb-5 stagger-item">
 								<div class="text-center process-step">
 									<div class="mb-4">
-										<div class="process-number" style="background: linear-gradient(135deg, #F4D03F, #F1C40F);">
+										<div class="process-number" style="background: linear-gradient(135deg, #E91E63, #E91E63);">
 											<span style="color: #333;">03</span>
 										</div>
 									</div>
-									<h4 class="mb-3" style="color: #F4D03F;" data-translate="process.step3.title">Perfect Delivery</h4>
+									<h4 class="mb-3" style="color: #E91E63;" data-translate="process.step3.title">Perfect Delivery</h4>
 									<p data-translate="process.step3.description">Each dessert is crafted fresh and delivered with care, ensuring that every bite captures the authentic taste of tropical Malaysia in premium fusion form.</p>
 								</div>
 							</div>
