--- a/products.html
+++ b/products.html
@@ -29,24 +29,12 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Premium Products | 3Adurian - Premium Fusion Desserts</title>
+	<title>Products | 3Adurian - Premium Fusion Desserts</title>
+
+	<!-- Global Font: Lexend -->
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 	<style>
-		:root {
-			--font-montserrat: 'Montserrat', sans-serif;
-		}
-		
-		body, html {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
-		
-		h1, h2, h3, h4, h5, h6 {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
-		
-		.menu-link, .button, .btn {
-			font-family: var(--font-montserrat), sans-serif !important;
-		}
 		
 		/* Floating Contact Bubbles */
 		.floating-contacts {
@@ -402,7 +390,7 @@
 
 				<section id="page-title" class="page-title-center d-flex align-items-center vh-30" style="background-image: linear-gradient(135deg, #F4D03F 0%, #F1C40F 50%, #7CB342 100%), url('images/products-banner.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
 					<div class="container clearfix">
-						<h1 class="display-4 ls0 nott text-white" data-translate="products.title">Our Products</h1>
+						<h1 class="display-4 ls0 nott text-white" data-translate="products.title">Products</h1>
 					</div>
 				</section>
 
