--- a/contact.html
+++ b/contact.html
@@ -259,6 +259,22 @@
 				font-size: 12px;
 			}
 		}
+
+		/* Map wrapper to prevent resize/jump on load */
+		.contact-map-wrapper {
+			width: 100%;
+			max-width: 600px;
+			height: 450px; /* reserve final height so layout doesn't shift */
+			border-radius: 8px;
+			overflow: hidden;
+			box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+		}
+
+		.contact-map-wrapper iframe {
+			width: 100%;
+			height: 100%;
+			border: 0;
+		}
 	</style>
 
 </head>
@@ -352,7 +368,7 @@
 
 
 				<div class="container my-5">
-					<div class="row justify-content-center align-items-center">
+					<div class="row justify-content-center align-items-start">
 						<div class="sidebar col-lg-4 my-5 my-lg-0">
 							<div class="fancy-title title-border mb-2">
 								<h3 data-translate="contact.info">Contact Information</h3>
@@ -365,7 +381,9 @@
 							<p class="mt-4"><strong data-translate="contact.location">Location:</strong><br>Spx Bercham Hub</p>
 						</div>
 						<div class="col-md-5">
-							<iframe src="https://www.google.com/maps?q=4.651671,101.129967&hl=en&z=14&output=embed" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							<div class="contact-map-wrapper">
+								<iframe src="https://www.google.com/maps?q=4.651671,101.129967&hl=en&z=14&output=embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							</div>
 							<p class="mt-3 text-center"><a href="https://maps.google.com/?q=4.651671,101.129967" target="_blank" style="color: #F4D03F" data-translate="contact.maps">View on Google Maps - Spx Bercham Hub</a></p>
 						</div>
 					</div>
@@ -437,7 +455,6 @@
 	============================================= -->
 	<script src="js/functions.js"></script>
 	<script src="js/language.js"></script>
-	<script src="js/interactive.js"></script>
 
 </body>
 
