Update contact and product pages with new background colors, refine product images, and enhance styling for better visual consistency across the site.

--- a/contact.html
+++ b/contact.html
@@ -360,7 +360,7 @@
 			<div class="content-wrap pt-0 pb-0">
 
 				<section id="page-title" class="page-title-center d-flex align-items-center vh-30"
-					style="background-image: linear-gradient(135deg, #FFB74D 0%, #FF8A65 50%, #E91E63 100%), url('images/contact-banner.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
+					style="background-image: linear-gradient(135deg, #FFB74D 0%, #FF8A65 50%, #FFB343 100%), url('images/contact-banner.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
 					<div class="container clearfix">
 						<h1 class="display-4 ls0 nott text-white" data-translate="contact.title">Contact Us</h1>
 					</div>
@@ -377,7 +377,7 @@
 							<p><strong data-translate="contact.email">Email:</strong> <a href="mailto:3adurian2025@gmail.com" style="color: #F4D03F">3adurian2025@gmail.com</a></p>
 							<p><strong data-translate="contact.phone">Phone:</strong> <a href="tel:+60197344930" style="color: #7CB342">+6019 734 4930</a></p>
 							<p><strong>WhatsApp:</strong> <a href="https://wa.me/60197344930" target="_blank" style="color: #7CB342">+6019 734 4930</a></p>
-							<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: #E91E63"><i class="fab fa-facebook-f"></i> 3A Durian</a></p>
+							<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: #FFB343"><i class="fab fa-facebook-f"></i> 3A Durian</a></p>
 							<p class="mt-4"><strong data-translate="contact.location">Location:</strong><br>Spx Bercham Hub</p>
 						</div>
 						<div class="col-md-5">
