--- a/index.html
+++ b/index.html
@@ -338,24 +338,24 @@
 			font-size: 1.2rem;
 		}
 
-		/* Themed hero colors & sizing */
+		/* Themed hero colors & sizing (two green tones across all lines) */
 		.hero-line-1 {
-			color: #7CB342; /* bright green accent */
+			color: #7CB342; /* bright durian green */
 			font-weight: 700;
 			letter-spacing: 2px;
 			text-transform: uppercase;
 		}
 		.hero-line-2 {
-			color: #1B5E20; /* deep durian green */
+			color: #7CB342;
 		}
 		.hero-line-3 {
-			color: #F4D03F; /* durian yellow */
+			color: #1B5E20; /* deep durian green */
 		}
 		.hero-line-4 {
-			color: #F1C40F; /* warm golden yellow */
+			color: #1B5E20;
 		}
 		.hero-line-5 {
-			color: #E91E63; /* pink */
+			color: #1B5E20; /* deep durian green */
 		}
 
 		@keyframes heroImageIn {
@@ -589,11 +589,11 @@
 							<div class="col-lg-4 col-md-6 mb-5 stagger-item">
 								<div class="text-center process-step">
 									<div class="mb-4">
-										<div class="process-number" style="background: linear-gradient(135deg, #E91E63, #E91E63);">
+										<div class="process-number" style="background: linear-gradient(135deg, #FFB343, #FFB343);">
 											<span style="color: #333;">03</span>
 										</div>
 									</div>
-									<h4 class="mb-3" style="color: #E91E63;" data-translate="process.step3.title">Perfect Delivery</h4>
+									<h4 class="mb-3" style="color: #FFB343;" data-translate="process.step3.title">Perfect Delivery</h4>
 									<p data-translate="process.step3.description">Each dessert is crafted fresh and delivered with care, ensuring that every bite captures the authentic taste of tropical Malaysia in premium fusion form.</p>
 								</div>
 							</div>
