--- a/products.html
+++ b/products.html
@@ -466,7 +466,7 @@
 										<div class="product-gallery mb-3">
 											<div class="row">
 												<div class="col-6 mb-3">
-													<img src="images/products/3adurian-durian-cream-cheese-cake.jpeg" alt="Durian Cream Cheese" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
+													<img src="images/products/3adurian-durian-cream-cheese-cake-2.jpeg" alt="Durian Cream Cheese" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
 													<div class="mt-2" style="font-size: 0.87rem; color: #F4D03F;">
 														<strong class="product-title" data-translate="products.durian.item1">Durian Cream Cheese</strong>
 														<div class="product-price" style="margin-top: 2px; font-size: 0.8rem; color: #555;">
@@ -476,7 +476,7 @@
 													</div>
 												</div>
 												<div class="col-6 mb-3">
-													<img src="images/products/3adurian-durian-tiramisu.jpeg" alt="Durian Tiramisu" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
+													<img src="images/products/3adurian-durian-tiramisu-2.jpeg" alt="Durian Tiramisu" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
 													<div class="mt-2" style="font-size: 0.87rem; color: #F4D03F;">
 														<strong class="product-title" data-translate="products.durian.item2">Durian Tiramisu</strong>
 														<div class="product-price" style="margin-top: 2px; font-size: 0.8rem; color: #555;">
@@ -486,7 +486,7 @@
 													</div>
 												</div>
 												<div class="col-6 mb-3">
-													<img src="images/products/3adurian-musang-king-durian-cream-cheese.jpeg" alt="Musang King Durian Cream Cheese" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
+													<img src="images/products/3adurian-musang-king-durian-cream-cheese-2.jpeg" alt="Musang King Durian Cream Cheese" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
 													<div class="mt-2" style="font-size: 0.87rem; color: #F4D03F;">
 														<strong class="product-title" data-translate="products.durian.item3">Musang King Cream Cheese</strong>
 														<div class="product-price" style="margin-top: 2px; font-size: 0.8rem; color: #555;">
@@ -496,7 +496,7 @@
 													</div>
 												</div>
 												<div class="col-6 mb-3">
-													<img src="images/products/3adurian-musang-king-durian-tiramisu.jpeg" alt="Musang King Durian Tiramisu" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
+													<img src="images/products/3adurian-musang-king-durian-tiramisu-2.jpeg" alt="Musang King Durian Tiramisu" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
 													<div class="mt-2" style="font-size: 0.87rem; color: #F4D03F;">
 														<strong class="product-title" data-translate="products.durian.item4">Musang King Tiramisu</strong>
 														<div class="product-price" style="margin-top: 2px; font-size: 0.8rem; color: #555;">
@@ -518,7 +518,7 @@
 										<div class="product-gallery mb-3">
 											<div class="row">
 												<div class="col-6 mb-3">
-													<img src="images/products/3adurian-pandan-coconut-cream-cheese-cake.jpeg" alt="Pandan Coconut Cream Cheese" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
+													<img src="images/products/3adurian-pandan-coconut-cream-cheese-cake-2.jpeg" alt="Pandan Coconut Cream Cheese" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
 													<div class="mt-2" style="font-size: 0.87rem; color: #7CB342;">
 														<strong class="product-title" data-translate="products.pandan.item1">Pandan Coconut Cream Cheese</strong>
 														<div class="product-price" style="margin-top: 2px; font-size: 0.8rem; color: #555;">
@@ -528,7 +528,7 @@
 													</div>
 												</div>
 												<div class="col-6 mb-3">
-													<img src="images/products/3adurian-pandan-coconut-tiramisu.jpeg" alt="Pandan Coconut Tiramisu" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
+													<img src="images/products/3adurian-pandan-coconut-tiramisu-2.jpeg" alt="Pandan Coconut Tiramisu" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
 													<div class="mt-2" style="font-size: 0.87rem; color: #7CB342;">
 														<strong class="product-title" data-translate="products.pandan.item2">Pandan Coconut Tiramisu</strong>
 														<div class="product-price" style="margin-top: 2px; font-size: 0.8rem; color: #555;">
@@ -550,8 +550,8 @@
 										<div class="product-gallery mb-3">
 											<div class="row">
 												<div class="col-6 mb-3">
-													<img src="images/products/3adurian-cempedak-cream-cheese-cake.jpeg" alt="Cempedak Cream Cheese" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
-													<div class="mt-2" style="font-size: 0.87rem; color: #E91E63;">
+													<img src="images/products/3adurian-cempedak-cream-cheese-cake-2.jpeg" alt="Cempedak Cream Cheese" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
+													<div class="mt-2" style="font-size: 0.87rem; color: #FFB343;">
 														<strong class="product-title" data-translate="products.cempedak.item1">Cempedak Cream Cheese</strong>
 														<div class="product-price" style="margin-top: 2px; font-size: 0.8rem; color: #555;">
 															<div><span style="font-weight: 600;">120g</span> &mdash; RM 14.80</div>
@@ -560,8 +560,8 @@
 													</div>
 												</div>
 												<div class="col-6 mb-3">
-													<img src="images/products/3adurian-cempedak-tiramisu.jpeg" alt="Cempedak Tiramisu" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
-													<div class="mt-2" style="font-size: 0.87rem; color: #E91E63;">
+													<img src="images/products/3adurian-cempedak-tiramisu-2.jpeg" alt="Cempedak Tiramisu" class="product-thumb" style="width: 100%; border-radius: 8px; cursor: pointer;" onclick="openLightbox(this.src, this.alt)">
+													<div class="mt-2" style="font-size: 0.87rem; color: #FFB343;">
 														<strong class="product-title" data-translate="products.cempedak.item2">Cempedak Tiramisu</strong>
 														<div class="product-price" style="margin-top: 2px; font-size: 0.8rem; color: #555;">
 															<div><span style="font-weight: 600;">120g</span> &mdash; RM 15.80</div>
